@@ -1,5 +1,9 @@
 2015-02-05  Jerold Haas  <jeroldhaas@gmail.com>
 
+	* PropertyGridTable.cs: 
+
+2015-02-05  Jerold Haas  <jeroldhaas@gmail.com>
+
 	* MainToolbar.cs: 
 
 2015-02-05  Jerold Haas  <jeroldhaas@gmail.com>
